# CTranslate2

./: CHANGELOG.md  CMakeLists.txt
examples/opennmt-py/: chat.py
include/ctranslate2/: allocator.h  devices.h  encoding.h  padder.h  primitives.h  replica_pool.h  storage_view.h
include/ctranslate2/layers/: attention.h  common.h  encoder_classification.h  transformer.h
include/ctranslate2/models/: language_model.h  model.h
include/ctranslate2/ops/: add.h  gemm.h  layer_norm.h
python/ctranslate2/: version.py
python/ctranslate2/converters/: transformers.py
python/ctranslate2/specs/: attention_spec.py  common_spec.py  transformer_spec.py
python/tools/: prepare_test_environment.sh
src/: allocator.cc  devices.cc  padder.cc  storage_view.cc
src/cpu/: allocator.cc  primitives.cc
src/cuda/: allocator.cc  primitives.cu  utils.cc
src/layers/: attention.cc  common.cc  encoder_classification.cc  transformer.cc
src/models/: language_model.cc  model.cc
src/ops/: add.cc  concat_split_slide_cpu.cc  concat_split_slide_gpu.cu  layer_norm.cc  layer_norm_with_mask.cc  layer_norm_with_mask_cpu.cc  layer_norm_with_mask_gpu.cu  slide.cc
test/: CMakeLists.txt  generate_test.cpp  main.cpp  translate_test.cpp
test/etc/: input.txt
